# auto-frp-tank

./: .gitignore  123.xlsx  LICENSE  Makefile  Part1.SLDPRT  Part6.SLDPRT  README.md  Readme.md  Sample.html  Tank.html  Tank1_Design_Report.html  Untitled-1.ipynb  assembly.py  din1.html  requirements.txt  table.xlsx  test.html  test.json  test.py  ui.py
.github/workflows/: python-package.yml
app/: Makefile  ui.py
app/connectors/: data.py  templates.py
backend/: marco.txt  pyproject.toml  test.py
connectors/: excel.py  formulas.py  solidworks.py  templates.py
development/: test.json  uml.drawio
frontend/: requirements.txt  ui.py
frontend/connectors/: data.py  excel.py  formulas.py  solidworks.py  templates.py
work/: Part5.SLDPRT  README.md  assembly.py  doc.py  font.py  form.ipynb
