[tool.poetry]
name = "auto-frp-tank"
version = "0.1.0"
description = "automate making frp tanks"
authors = ["Matthew Draws <draws.matthew@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_frp_tank"}]

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^304"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
